# worldathletics

./: LICENSE.md  README.md  pyproject.toml
examples/: get_all_calendar_event_results.py
graphql/: queries.graphql  schema.graphql
scripts/: generate_queries.py
worldathletics/: __init__.py  air_quality_device_element_reads.py  air_quality_devices.py  async_base_client.py  base_model.py  client.py  competition_document.py  competitions_by_country.py  countries_by_event_id.py  current_record_holder.py  disciplines_by_event_id.py  enums.py  event_media.py  exceptions.py  get_all_competitions.py  get_all_event_phases_by_discipline.py  get_all_gold_tour_events.py  get_all_schedules.py  get_all_time_list.py  get_appearance.py  get_article.py  get_article_locations.py  get_articles.py  get_asset.py  get_assets.py  get_assets_dates.py  get_assets_total.py  get_athlete.py  get_athlete_profile_athlete_representative.py  get_athlete_representative_athlete_search.py  get_athlete_representative_directory.py  get_athlete_representative_profile.py  get_athlete_representative_top_list.py  get_athlete_results.py  get_banners.py  get_c_i_s_competitor_res_date.py  get_c_i_s_competitor_res_disp.py  get_c_i_s_single_competitor.py  get_calendar_competition_results.py  get_calendar_events.py  (+130 more)
worldathletics/custom/: async_base_client.py  base_model.py  exceptions.py  scalars.py
